force-app/main/default/staticresources/python/Disappear/src/objects/AppearLogArchive__c.object
<CustomObject>
    <fields>
        <fullName>CreatedTime__c</fullName>
        <label>CreatedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LogType__c</fullName>
        <label>LogType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageType__c</fullName>
        <label>MessageType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubId__c</fullName>
        <label>PubId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Appear Log Archives</relationshipLabel>
        <relationshipName>Appear_Log_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordName__c</fullName>
        <label>RecordName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordURL__c</fullName>
        <label>RecordURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>logSubjectId__c</fullName>
        <label>logSubjectId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Appear Log Archive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Appear Log Archive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appear Log Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>